--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 <body>
     
     <script type="module">
-        import wasm_bindgen from './pkg/cryptid.js';
+        import wasm_bindgen from './cryptid.js';
 
         async function run() {
-            await wasm_bindgen({module_or_path: "/pkg/cryptid_bg.wasm"}).catch(error => {
+            await wasm_bindgen({module_or_path: "/cryptid_bg.wasm"}).catch(error => {
                 if (!error.message.startsWith("Using exceptions for control flow, don't mind me. This isn't actually an error!")) {
                     throw error;
                 }
